--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,37 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  width: 50vw;
+  padding: 30vh 0 0 20vw;
+  background-color: burlywood;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.abc{
+  text-align: center;
+}
+
+.btn-default{
+  width: 40px;
+}
+
+#clear{
+  width: 29.5vw;
+}
+
+#container{
+  border: 3px solid black;
+  background-color: chocolate;
+}
+#formula{
+  border: 1px solid black;
+}
+#display{
+  border: 1px solid black;
+}
+
+
